swaps index svg with a similar width to the rest of the svgs. Fixes the the animation issue on safari; adds breaks and adjusts display of card

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ svg {
 } 
 
 #guy {
-    transform: translateX(20%);
+    /* transform: translateX(20%); */
 }
 
 #card {
